# Komorebi

./: .gitignore  CLAUDE.md  README.md  personal-agent-blueprint.md  pyproject.toml
.claude/commands/: commit.md
.claude/skills/project-manager/: SKILL.md
config/: settings.yaml
data/projects/: komorebi.md  layerwise.md
prompts/: system.md
scripts/: migrate_projects.py
src/komorebi/: __init__.py  agent.py  config.py  hello.py  main.py  session.py  skills.py  test_multiturn.py  test_tools.py
src/komorebi/auth/: __init__.py  google_auth.py
src/komorebi/tools/: __init__.py  calendar.py  memory.py  planning.py  project.py
src/komorebi/ui/: __init__.py  app.py  commands.py  styles.tcss
src/komorebi/ui/screens/: __init__.py  chat.py
src/komorebi/ui/widgets/: __init__.py  chat_input.py  command_palette.py  message_view.py  plan_input_modal.py  thinking.py  tool_panel.py
src/komorebi/utils/: __init__.py  git.py  markdown.py
tests/: __init__.py  test_calendar.py  test_planning.py  test_project.py  test_skills.py
